# ripple-simulation

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/renderer/: buffers.cpp  buffers.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/shader/: ripple.frag  ripple.vert
src/utils/: FileWatch.hpp  fileio.cpp  fileio.hpp
